# RISC-V-Simulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: structure.drawio  structure.md
src/: CMakeLists.txt  main.cpp  simulator.cpp
src/include/: simulator.h
src/include/cache/: cache_manager.h  lru_k_replacer.h
src/include/common/: config.h  types.h
src/include/container/: array.h  circular_queue.h
src/include/simulator/: simulator.h
src/include/storage/: bus.h  memory.h
src/include/unit/: arithmetic_logic_unit.h  base_unit.h  instruction_unit.h  load_store_buffer.h  memory_unit.h  predict_unit.h  register_file.h  reorder_buffer.h  reservation_station.h
src/include/utils/: utils.h
src/simulator/: simulator.cpp
src/storage/: bus.cpp  memory.cpp
src/unit/: arithmetic_logic_unit.cpp  instrction_unit.cpp  instruction_unit.cpp  load_store_buffer.cpp  memory_unit.cpp  predict_unit.cpp  reorder_buffer.cpp  reservation_station.cpp
src/utils/: utils.cpp
test/container/: array_test.cpp  queue_test.cpp
